--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 #page title
-page_title                                : Cryo - Cold Shower App                    # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
+page_title                                : Cold Shower App - Cryo                    # Automatically populates with app name if not set and if iOS app ID is set. Otherwise enter manually.
 
 # App Info
 ios_app_id                                : 1632354353                                # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
@@ -13,7 +13,7 @@ presskit_download_link                    :                                     
 app_icon                                  : assets/appicon.png                        # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  : Cryo                                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 :                                           # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : Discover the power of cold showers with Cryo 🔥. Become a healthier, more disciplined version of you.
+app_description                           : Discover the health benefit of cold showers for your body and challenge yourself with Cryo app - available on iOS. Inspired by Wim Hof's "Becoming the Iceman", use cold shower therapy to become a healthier and disciplined version of you. 
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
@@ -35,6 +35,10 @@ youtube_username                          :
 # Feature List                            Edit, add or remove features to be presented.
 features                                  :
 
+  - title                                 : Smart timer for cold/warm sessions
+    description                           : A cold shower session starts with a warm shower, followed by a cold shower. The guided session will gradually increase the length of the cold shower timer.
+    fontawesome_icon_name                 : clock
+    
   - title                                 : Reduced stress levels
     description                           : Regularly taking cold showers trains your nervous system to become more resilient.
     fontawesome_icon_name                 : brain
